[gd_scene load_steps=13 format=2]

[ext_resource path="res://Engine/white.png" type="Texture" id=1]
[ext_resource path="res://Rooms/Area1/Assets/Elevator/elevator_floor_indicator.png" type="Texture" id=2]
[ext_resource path="res://Rooms/Area1/Assets/Elevator/elevator_room.png" type="Texture" id=3]
[ext_resource path="res://Engine/Fonts/FontQuestLittle.tres" type="DynamicFont" id=4]
[ext_resource path="res://Rooms/Area1/1-1/elevator_floor_indicator.gd" type="Script" id=5]
[ext_resource path="res://Rooms/Tools/Elevator/ElevatorRoom.gd" type="Script" id=6]
[ext_resource path="res://Rooms/Tools/ScenePortal.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 23 )

[sub_resource type="Animation" id=3]
resource_name = "go_down"
length = 5.5
tracks/0/type = "value"
tracks/0/path = NodePath("FloorIndicator:floornum")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 3.5 ),
"transitions": PoolRealArray( 3.03143, 3.03143, 1 ),
"update": 0,
"values": [ 322, 322, 140 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DoorLight:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4.2, 4.6, 4.8, 5 ),
"transitions": PoolRealArray( 1, 2.46229, 0.258816, 2.46229, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 0.412 ), Vector2( 1e-05, 0.412 ), Vector2( 0.4, 0.412 ), Vector2( 0.32, 0.412 ), Vector2( 0.4, 0.412 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScenePortal:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5.1, 5.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31, 22 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 2 )

[node name="ElevatorRoom" type="Node2D"]
script = ExtResource( 6 )

[node name="Back" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="FloorIndicator" type="Sprite" parent="." groups=[
"tick",
]]
position = Vector2( -11, -16 )
texture = ExtResource( 2 )
script = ExtResource( 5 )
floornum = 322

[node name="Label" type="Label" parent="FloorIndicator"]
margin_left = -9.0
margin_top = -14.0
margin_right = 9.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.486275, 0.666667, 0.545098, 1 )
custom_colors/font_color_shadow = Color( 0.109804, 0.12549, 0.105882, 1 )
text = "322"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collisions" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 0, -9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 0, 50 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Collisions"]
position = Vector2( 27, 30 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Collisions"]
position = Vector2( -26, 29 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/go_down = SubResource( 3 )

[node name="TriggerField" type="Area2D" parent="."]
visible = false
position = Vector2( 1, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerField"]
shape = SubResource( 4 )

[node name="DoorLight" type="Light2D" parent="."]
position = Vector2( 1, 30.5883 )
scale = Vector2( 1e-05, 0.412 )
texture = ExtResource( 1 )
offset = Vector2( 0, -31 )
color = Color( 1, 0.976471, 0.423529, 1 )
shadow_enabled = true

[node name="ScenePortal" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, 31 )
monitoring = false
new_scene = "res://Rooms/Area1/1-2/1-2.tscn"
player_new_position = Vector2( 256, 41 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScenePortal"]
shape = SubResource( 5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="TriggerField" to="." method="_on_TriggerField_body_entered"]
